gcc/testsuite/rust/rustc/ui/error-codes/E0118-2.rs
struct Foo;

impl &mut Foo {
// { dg-error ".E0118." "" { target *-*-* } .-1 }
    fn bar(self) {}
}

fn main() {}

